# soem

./: .gitignore  CMakeLists.txt
soem_core/: .gitignore  CMakeLists.txt  README
soem_ebox/: .gitignore  CMakeLists.txt  make_types.sh
soem_ebox/msg/: EBOXAnalog.h  EBOXDigital.h  EBOXOut.h  EBOXPWM.h
soem_ebox/src/: soem_ebox.h
soem_master/: .gitignore  CMakeLists.txt
